# nah

./: .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  activity.jsonl  mkdocs.yml  program.md  pyproject.toml
.claude/commands/: nah-demo.md
.github/: pull_request_template.md
.github/workflows/: deploy-docs.yml  publish.yml
autoharden/: program.md
autoresearch/: activity.jsonl  program.md
scripts/: deploy-docs.sh
site/: cli.md  how-it-works.md  index.md  install.md
site/configuration/: content.md  database.md  index.md  llm.md  profiles.md  safety-lists.md
site/guides/: airgapped.md  custom-taxonomy.md  getting-started.md
site/stylesheets/: custom.css
src/nah/: __init__.py  agents.py  bash.py  cli.py  config.py  content.py  context.py  hook.py  llm.py  log.py  paths.py  remember.py  taxonomy.py
src/nah/data/: policies.json  test_battery.json  types.json
src/nah/data/classify/: git_safe.json  git_write.json
src/nah/data/classify_full/: container_destructive.json  filesystem_read.json  filesystem_write.json
tests/: manual_minimal_profile_check.py  test_bash.py  test_cli.py  test_config.py  test_context.py  test_fd014_cleanup.py  test_fd025_verify.py  test_fd079_script_exec.py  test_hint.py  test_hint_battery.py  test_hook_classify.py  test_hook_integration.py  test_hook_llm.py  test_hook_robustness.py  test_hook_webfetch.py  test_llm.py  test_llm_live.py  test_packaging.py  test_paths.py  test_remember.py  test_taxonomy.py
